--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -55,6 +55,42 @@
     <artifactId>dkpro-core-textnormalizer-asl</artifactId>
     <version>1.12.0</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.core.corenlp-gpl</artifactId>
+    <version>1.10.0</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.core.api.frequency-asl</artifactId>
+    <version>1.10.0</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>com.googlecode.jweb1t</groupId>
+	  <artifactId>com.googlecode.jweb1t</artifactId>
+	  <version>1.3.0</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.11</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpmime</artifactId>
+    <version>4.5.11</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.12.2</version>
+	</dependency>
   	
   </dependencies>
   
