--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -91,6 +91,12 @@
     <artifactId>jsoup</artifactId>
     <version>1.12.2</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+	</dependency>
   	
   </dependencies>
   
