--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -97,6 +97,18 @@
     <artifactId>json</artifactId>
     <version>20190722</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.core.bananasplit-asl</artifactId>
+    <version>1.4.0</version>
+	</dependency>
+	
+	<dependency>
+	<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+	<artifactId>de.tudarmstadt.ukp.dkpro.core.decompounding-asl</artifactId>
+	<version>1.8.0</version>
+	</dependency>
   	
   </dependencies>
   
