--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -87,6 +87,12 @@
 	</dependency>
 	
 	<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-text</artifactId>
+    <version>1.8</version>
+	</dependency>
+	
+	<dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
     <version>1.12.2</version>
