--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -4,6 +4,13 @@
   <artifactId>de.unidue.ltl.spelling</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  	<repositories>
+		<repository>
+			<id>ukp-oss-model-releases</id>
+			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
+		</repository>
+	</repositories>
+  
   <dependencies>
   
   	<dependency>
@@ -115,6 +122,19 @@
 	<artifactId>de.tudarmstadt.ukp.dkpro.core.decompounding-asl</artifactId>
 	<version>1.8.0</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-model-sentence-it-maxent</artifactId>
+    <version>20130618.0</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-model-token-it-maxent</artifactId>
+    <version>20130618.0</version>
+	</dependency>
+
   	
   </dependencies>
   
