Include option to collect phonetic transcriptions for misspellings in advance

--- a/de.unidue.ltl.spelling/pom.xml
+++ b/de.unidue.ltl.spelling/pom.xml
@@ -152,7 +152,108 @@
     <artifactId>de.tudarmstadt.ukp.dkpro.core.api.ner-asl</artifactId>
     <version>1.10.0</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>com.nativelibs4java</groupId>
+    <artifactId>bridj</artifactId>
+    <version>0.7.0</version>
+	</dependency>
+	
+	<dependency>
+	<groupId>com.gitlab.dumonts</groupId>
+	<artifactId>hunspell</artifactId>
+	<version>1.1.1</version>
+    </dependency>
+    
+    <dependency>
+	<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+	<artifactId>de.tudarmstadt.ukp.dkpro.core.tokit-asl</artifactId>
+	<version>1.9.3</version>
+	</dependency>
   	
   </dependencies>
+  	<build>
+  		<plugins>
+  			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+							<transformers>
+								<!-- Set the main class of the executable JAR -->
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>de/unidue/ltl/spelling/experiments/ErrorCorrectionExperiments</mainClass>
+									<!-- mainClass>de.unidue.ltl.eduscoring.zlbessays.experiments.ASAP_Experiments</mainClass -->
+									<!-- mainClass>de.unidue.ltl.eduscoring.zlbessays.experiments.EssayGradingExperiment_LabelChangeCV</mainClass -->
+									<!-- mainClass>de.unidue.ltl.eduscoring.zlbessays.experiments.EssayGradingExperiment_LearningCurves</mainClass -->
+								</transformer>
+								<!-- Merge the uimaFIT configuration files -->
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>
+										META-INF/org.apache.uima.fit/fsindexes.txt 
+									</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>
+										META-INF/org.apache.uima.fit/types.txt
+									</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>
+										META-INF/org.apache.uima.fit/typepriorities.txt
+									</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>
+										META-INF/lab/engines.properties
+									</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
+									<resource>
+										META-INF/spring/activemq-broker.xml
+									</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/spring.handlers</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/spring.schemas</resource>
+								</transformer>
+								<!-- Prevent huge shaded artifacts from being deployed to a Maven 
+									repository (remove if not desired) -->
+							</transformers>
+							<outputFile>
+								${project.build.directory}/${project.artifactId}-${project.version}-CITA-hunspell-subtlexUnigrams-fromFull10-NEW.jar
+							</outputFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
   
 </project>
